[package]
name = "poke"
description = "Powerful utility to manage ssh keys"
version = "0.6.0-alpha"
authors = ["Katharina 'spacekookie' Fey"]
repository = "https://github.com/spacekookie/poke"
license = "MPL-2.0"

[dependencies]
clap = { version = "^2.0", features = ["wrap_help"] }
lockchain-core = "*"

serde = "^1.0"
serde_derive = "^1.0"
toml = "*"
